prevent code in posts from causing horizontal overflow
We are currently not wrapping code in posts in the crawler view. This affects both unformatted code and inline code. This commit forces such code to wrap in order to prevent horizontal overflow which the Google bot complains about since it causes some content to be rendered outside of the viewport in the mobile crawler.

--- a/app/assets/stylesheets/common/base/crawler_layout.scss
+++ b/app/assets/stylesheets/common/base/crawler_layout.scss
@@ -18,6 +18,7 @@ body.crawler {
   }
   div#main-outlet {
     div.post {
+      word-break: break-word;
       img {
         max-width: 100%;
       }
